# termlog

./: .gitignore  CLAUDE.md  CLAUDETODO.md  Cargo.toml  README.md  TODO.md
.claude/: settings.json  settings.local.json
ratatui-examples/: README.md
src/: app.rs  app_block.rs  content_line_maker.rs  file_finder.rs  log_list.rs  log_parser.rs  main.rs  metadata.rs  scrolling_test.rs  theme.rs  ui_logger.rs
