[package]
name = "dhlog"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
libc = "0.2.175"
memmap2 = "0.9.8"
notify = "8.2.0"
once_cell = "1.21.3"
ratatui = "0.29.0"
regex = "1.11.2"
unicode-width = "0.2.0"
log = "0.4"
simplelog = "0.12"
uuid = { version = "1.18.1", features = ["v4"] }
